# cache-engine-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: ICache.hpp  LFUCache.hpp  LRUCache.hpp
src/: LFUCache.cpp  LRUCache.cpp  main.cpp
tests/: testLFUCache.cpp  testLRUCache.cpp
